cmake_minimum_required(VERSION 3.5)

project(cpp_stl_container_master)

add_compile_options(-std=c++17)



add_subdirectory(vector)
add_subdirectory(stack)
add_subdirectory(queue)
add_subdirectory(map)
add_subdirectory(list)
add_subdirectory(bits)
add_subdirectory(array)
add_subdirectory(application)